# eoaa-analytics

./: .gitignore  README.md  app.py  main.py  pyproject.toml  ruff.toml
data/: application_types.csv  eoaa.duckdb  eoaa_db.duckdb
queries/: duckdb_queries.sql
src/eoaa_analytics/: __init__.py  __main__.py  extractor.py  pipeline.py
tests/: test_extractor.py  test_pipeline.py
