[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eoaa-analytics"
version = "0.1.0"
description = "EOAA Analytics using DuckDB, dlt and Streamlit."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "George Matheou", email = "g.matheou@hotmail.com" }
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "dlt[duckdb]>=1.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
eoaa-load-building-status = "eoaa_analytics.__main__:main"

[project.urls]
Repository = "https://github.com/cloud-datastacks/eoaa-analytics"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/eoaa_analytics"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "@abstractmethod",
  "class .*\\(ABC\\):",
  "pragma: no cover",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eoaa_analytics"]
